--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,30 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8" />
     <title></title>
-	<meta charset="utf-8" />
+    <meta name="author" content="Nick Davis (hire@nicholasdavis.co)">
+    <meta name="description" content="Code example: Dropbox app using AngularJs, Angular UI Boostrap, UI Router, and Bootstrap">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="assets/css/global.min.css" />
 </head>
 <body>
-    
+
+    <div ui-view></div>
+
+    <noscript>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h1 class="mar-top-none">To run Dropbox App, please enable JavaScript on your browser.</h1>
+                </div>
+            </div>
+        </div>
+    </noscript>
+
+    <script src="app/app.min.js"></script>
+
 </body>
 </html>
