--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="assets/css/global.min.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
 </head>
 <body>
 
