--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="assets/css/global.css" />
+    <link rel="stylesheet" href="assets/css/global.min.css" />
 </head>
 <body>
 
@@ -18,13 +18,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 class="mar-top-none">To run Dropbox App, please enable JavaScript on your browser.</h1>
+                    <h1 class="mt-0">To run Dropbox App, please enable JavaScript on your browser.</h1>
                 </div>
             </div>
         </div>
     </noscript>
+    <script src="assets/lib/angular/angular.js"></script>
+    <script src="assets/lib/angular-animate/angular-animate.js"></script>
+    <script src="assets/lib/angular-messages/angular-messages.js"></script>
+    <script src="assets/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="assets/lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="assets/lib/moment/moment.js"></script>
+    <script src="assets/lib/angular-moment/angular-moment.js"></script>
 
-    <script src="app/app.min.js"></script>
+
+    <script src="components/app.js"></script>
+    <script src="components/folder/folder-controller.js"></script>
+    <script src="components/files/files-controller.js"></script>
+    <script src="components/files/files-service.js"></script>
+
 
 </body>
 </html>
