--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="dropboxApp">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title ng-bind="pageTitle + ' - Mail Client App'"></title>
     <meta name="author" content="Nick Davis (hire@nicholasdavis.co)">
     <meta name="description" content="Code example: Dropbox app using AngularJs, Angular UI Boostrap, UI Router, and Bootstrap">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
