--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html ng-app="dropboxApp">
 <head>
     <meta charset="utf-8" />
-    <title ng-bind="pageTitle + ' - Mail Client App'"></title>
+    <title ng-bind="pageTitle + ' - Dropbox App'"></title>
     <meta name="author" content="Nick Davis (hire@nicholasdavis.co)">
     <meta name="description" content="Code example: Dropbox app using AngularJs, Angular UI Boostrap, UI Router, and Bootstrap">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
